--- a/templates/movielist.html
+++ b/templates/movielist.html
@@ -52,7 +52,7 @@
       // configure de la siguiente manera
       $('div.mv-item-infor p').expander({
       slicePoint: 50, // si eliminamos por defecto es 100 caracteres
-      expandText: '[...]', // por defecto es 'read more...'
+      expandText: '[Ver más...]', // por defecto es 'read more...'
       collapseTimer: 0, // tiempo de para cerrar la expanción si desea poner 0 para no cerrar
       userCollapseText: '(Ocultar)' // por defecto es 'read less...'
     });}
@@ -68,7 +68,7 @@
 						<style type="text/css">
 							@media (max-width: 600px){
 								.mv-item-infor p {
-									margin-left: 30px !important;
+									margin-left: 0px !important;
 								}
 							}
 						</style>
