--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -242,11 +242,21 @@
 							@media (max-width: 610px) {
 								.genero-button {
 									margin-left: -15px !important;
+									margin-top: -20px !important;
+								}
+								.border-select {
+									position: relative;
+									top: 18px !important;
 								}
 							}
 							@media (max-width: 480px) {
 								.genero-button {
 									margin-left: -10px !important;
+									margin-top: -20px !important;
+								}
+								.border-select {
+									position: relative;
+									top: 18px !important;
 								}
 							}
 						</style>
