--- a/templates/movielist.html
+++ b/templates/movielist.html
@@ -496,9 +496,9 @@ Prueba con el nombre original.</p>
 							</div>
 						</form>
 					</div>
-					<div class="ads">
+					<!--div class="ads">
 						<img src="images/uploads/ads1.png" alt="">
-					</div>
+					</div-->
 					<div class="sb-facebook sb-it">
 						<h4 class="sb-title">Encuentranos en facebook</h4>
 						<iframe src="" data-src="" height="315" style="width:100%;border:none;overflow:hidden"></iframe>
