--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,9 @@
 	    					{% if pelicula.genero2 %}
 	    					<span class=" {% if pelicula.genero2 == "AVEN" %} green {% endif %}{% if pelicula.genero2 == "COME" %} orange {% endif %} {% if pelicula.genero2 == "DRA" %} yell{% endif %}{% if pelicula.genero2 == "ANI" %} blue {% endif %}{% if pelicula.genero2 == "ROM" %} red {% endif %}{% if pelicula.genero2 == "SC" %} greendark {% endif %}{% if pelicula.genero2 == "CRI" %} reddark {% endif %}{% if pelicula.genero2 == "TER" %} black {% endif %}{% if pelicula.genero2 == "FANT" %} sowhitegreen {% endif %}{% if pelicula.genero2 == "ACC" %} darkgray {% endif %}{% if pelicula.genero2 == "SUS" %} gray {% endif %}{% if pelicula.genero2 == "DOCU" %} DOCU {% endif %}"><a href="#">{{ pelicula.genero2 }}</a></span>
 	    					{% endif %}
+	    					{% if pelicula.genero3 %}
+	    					<span class=" {% if pelicula.genero2 == "AVEN" %} green {% endif %}{% if pelicula.genero3 == "COME" %} orange {% endif %} {% if pelicula.genero3 == "DRA" %} yell{% endif %}{% if pelicula.genero3 == "ANI" %} blue {% endif %}{% if pelicula.genero3 == "ROM" %} red {% endif %}{% if pelicula.genero3 == "SC" %} greendark {% endif %}{% if pelicula.genero3 == "CRI" %} reddark {% endif %}{% if pelicula.genero3 == "TER" %} black {% endif %}{% if pelicula.genero3 == "FANT" %} sowhitegreen {% endif %}{% if pelicula.genero3 == "ACC" %} darkgray {% endif %}{% if pelicula.genero3 == "SUS" %} gray {% endif %}{% if pelicula.genero3 == "DOCU" %} DOCU {% endif %}"><a href="#">{{ pelicula.genero3 }}</a></span>
+	    					{% endif %}
 
 	    				</div>
 	    				<h6 style="background: rgba(254,140,0,0.7);  /* fallback for old browsers */
