--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1485,7 +1485,7 @@ $(this).remove();
                     
                     <div class="sb-it">
                      <h6>Generos:</h6>
-                     <p><a href="#">{{ peliculaa.genero }} </a>,<a href="#">{{ peliculaa.genero2 }} </a>  </p>
+                     <p><a href="#">{{ peliculaa.genero }} </a>,<a href="#">{{ peliculaa.genero2 }} </a>,<a href="#">{{ peliculaa.genero3 }} </a>  </p>
                     </div>
                     <div class="sb-it">
                      <h6>Fecha de extreno:</h6>
