--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -166,7 +166,7 @@
 					<p style="width: 100%;">{{ peliculas_list.count }}<span>{% if peliculas_list.count == 1 %} Película encontrada{% else %} Películas encontradas {% endif%}</span></p>
 					<label>Ordenada por:</label>
 					<select>
-						<option value="range">Fecha de selección</option>
+						<option value="range">Alfabéticamente</option>
 					</select>
 					
 				</div>
@@ -646,7 +646,7 @@
 					<p>{{ peliculas_list.count }}<span>{% if peliculas_list.count == 1 %} Serie encontrada{% else %} Series encontradas {% endif%}</span></p>
 					<label>Ordenada por:</label>
 					<select>
-						<option value="range">Fecha de selección</option>
+						<option value="range">Alfabéticamente</option>
 					</select>
 					
 				</div>
