--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -330,7 +330,16 @@ $.ajaxSetup({
              function send(b) {
               var juan = b.id
 
-              
+              var input = document.getElementById("inputLGEx")
+    var input_error = document.getElementById('input_error')
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_error').style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  } else {
 
              var $myForm = $('.coment')
              $myForm.submit(function(event){
@@ -353,9 +362,7 @@ $.ajaxSetup({
              })
 
           function handleFormSuccess(data, textStatus, jqXHR){
-              console.log(data.error)
-              console.log(textStatus)
-              console.log(jqXHR)
+              
      
      
      $("#ven").load(window.location + " #ven");
@@ -367,10 +374,18 @@ $.ajaxSetup({
              }
 
              function handleFormError(jqXHR, textStatus, errorThrown){
+
+                if (textStatus=="error") {
+                    document.getElementById("sendingcoment").style.display = "none";
+                } 
                  
+
+
+
+
              }
              
-             
+             }
              
              }
              
@@ -395,7 +410,13 @@ $.ajaxSetup({
              })
 
              function handleFormSuccess(data, textStatus, jqXHR){
-                 
+                 var input = document.getElementById("texto" + juan)
+    var input_error = document.getElementById('input_error_update' + juan)
+  // validate input
+    input.style.border = "1px solid green";
+    document.getElementById('input_error_update' + juan).style.color = "green";
+    input_error.textContent = "Editado";
+    input.focus();
                  document.getElementById("updateajax" + juan).innerHTML = data.content;
                  document.getElementById("texto" + juan).innerHTML = data.content;
                  $myForm[0].reset();
@@ -405,7 +426,16 @@ $.ajaxSetup({
  
              
              function handleFormError(jqXHR, textStatus, errorThrown){
-                 
+                 var input = document.getElementById("texto" + juan)
+    var input_error = document.getElementById('input_error_update' + juan)
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_error_update').style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  }
              }
              
              
@@ -454,8 +484,14 @@ function update_ans(b) {
                  })
              })
 
-             function handleFormSuccess(data, textStatus, jqXHR){
-                 
+            function handleFormSuccess(data, textStatus, jqXHR){
+                 var input = document.getElementById("textoans" + tt)
+    var input_error = document.getElementById('input_error_update_ans' + tt)
+  // validate input
+    input.style.border = "1px solid green";
+    document.getElementById('input_error_update_ans' + tt).style.color = "green";
+    input_error.textContent = "Editado";
+    input.focus();
                  document.getElementById("cm" + tt).innerHTML = data.content;
                  document.getElementById("textoans" + tt).innerHTML = data.content;
                  $myForm[0].reset();
@@ -465,7 +501,16 @@ function update_ans(b) {
  
              
              function handleFormError(jqXHR, textStatus, errorThrown){
-                 
+                 var input = document.getElementById("textoans" + tt)
+    var input_error = document.getElementById('input_error_update_ans' + tt)
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_error_update_ans' + tt).style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  }
              }
              
              
@@ -886,7 +931,16 @@ $(this).remove();
               var juan = b.id
               var c = juan.substr(1)
 
-              
+              var input = document.getElementById("xv" + c)
+    var input_error = document.getElementById('input_errorv' + c)
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_errorv' + c).style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  } else {
 
              var $myForm = $('.resp' + juan)
              $myForm.submit(function(event){
@@ -929,7 +983,7 @@ $(this).remove();
 
        $("#j" + c).load(window.location + " #j" + c);
        $("#like_div" + c).load(window.location + " #like_div" + c);
-       $("#ccn" + c).append(' <div id="rs'+data.idp+'"><div class="mv-user-review-item" style="margin-bottom: -6px; width: 70%; position: relative; left: 40px;"><div class="user-infor" style="margin-bottom: -0px;"><img style="border-radius: 50%; width: 50px; height: 50px;" src="'+data.perfil+'" alt=""><div><h3 style="font-size: 16px; display:initial;">'+data.name+'</h3><i id="cog'+data.idp+'" style="cursor: pointer; color: grey; position: relative; top: -4x;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="fa fa-cog dropdown-toggle px-3"></i><div class="btn-group"><div class="dropdown-menu"><a class="dropdown-item" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample">Editar comentario<i style="position:relative; left: 8.5%; padding-left: 8px;" class="fa  fa-edit" aria-hidden="true"></i></a><form style="display: inline;" class="dele_ans'+data.idp+'" data-url="/delete_res/'+data.idp+'/" method="post">'+token+'<button onclick="deletee_res(this)" name="'+data.id+'"id="dele_ans'+data.idp+'" style="background: none; border: none;"><a class="dropdown-item">Eliminar respuesta<i style="padding-left: 8px;" class="fa fa-trash-o" aria-hidden="true"></i></a></button></form><!--a class="dropdown-item" href="#">Something else here</a><div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a--></div></div><p class="time" style="margin-top: -0x;">'+data.fecha+'</p></div></div><p id="cm'+data.idp+'" style="margin-bottom: -15px;">'+data.content+'</p></div></div><div class="collapse container" id="col'+data.idp+'"><div class="mt-3"><div class="md-form form-lg"><form method="post" class="updateup_ans'+data.idp+'" data-url="/responder_update/'+data.idp+'/">'+token+'<textarea id="textoans'+data.idp+'" onkeypress="return limita(400);" style=" height: 6em; width: 400px;" name="respuesta">'+data.content+'</textarea><br><input onclick="update_ans(this)" id="up_ans'+data.idp+'" style="border: none; cursor: pointer" type="submit" title="Editar" name="" class="redbtn" style="padding: 7px;" value="Editar"><a style=" padding: 7px;   " class="" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-close"  aria-hidden="true"></i></a></form></div></div></div>');
+       $("#ccn" + c).append(' <div id="rs'+data.idp+'"><div class="mv-user-review-item" style="margin-bottom: -6px; width: 70%; position: relative; left: 40px;"><div class="user-infor" style="margin-bottom: -0px;"><img style="border-radius: 50%; width: 50px; height: 50px;" src="'+data.perfil+'" alt=""><div><h3 style="font-size: 16px; display:initial;">'+data.name+'</h3><i id="cog'+data.idp+'" style="cursor: pointer; color: grey; position: relative; top: -4x;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="fa fa-cog dropdown-toggle px-3"></i><div class="btn-group"><div class="dropdown-menu"><a class="dropdown-item" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample">Editar comentario<i style="position:relative; left: 8.5%; padding-left: 8px;" class="fa  fa-edit" aria-hidden="true"></i></a><form style="display: inline;" class="dele_ans'+data.idp+'" data-url="/delete_res/'+data.idp+'/" method="post">'+token+'<button onclick="deletee_res(this)" name="'+data.id+'"id="dele_ans'+data.idp+'" style="background: none; border: none;"><a class="dropdown-item">Eliminar respuesta<i style="padding-left: 8px;" class="fa fa-trash-o" aria-hidden="true"></i></a></button></form><!--a class="dropdown-item" href="#">Something else here</a><div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a--></div></div><p class="time" style="margin-top: -0x;">'+data.fecha+'</p></div></div><p class="post" id="cm'+data.idp+'" style="margin-bottom: -15px;">'+data.content+'</p></div></div><div class="collapse container" id="col'+data.idp+'"><div class="mt-3"><div class="md-form form-lg"><form method="post" class="updateup_ans'+data.idp+'" data-url="/responder_update/'+data.idp+'/">'+token+'<textarea id="textoans'+data.idp+'" onkeypress="return limita(400);" style=" height: 6em; width: 400px;" name="respuesta">'+data.content+'</textarea><br><input onclick="update_ans(this)" id="up_ans'+data.idp+'" style="border: none; cursor: pointer" type="submit" title="Editar" name="" class="redbtn" style="padding: 7px;" value="Editar"><a style=" padding: 7px;   " class="" href="#" data-toggle="collapse" data-target="#col'+data.idp+'" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-close"  aria-hidden="true"></i></a></form><div id="input_error_update_ans'+data.idp+'" style="margin-top: 0px;"></div></div></div></div>');
 
       
 
@@ -938,10 +992,19 @@ $(this).remove();
          }
 
              function handleFormError(jqXHR, textStatus, errorThrown){
-                 
+                 if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_error' + juan).style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  } 
+$("#load" + c).addClass('fa-chevron-down');
+                    $("#load" + c).removeClass('fa-circle-o-notch');
+
              }
              
-             
+             }
              
              }
 
@@ -1173,6 +1236,11 @@ $(this).remove();
         font-size: 13px; 
         display: initial;
     }
+
+    .post {
+        width: 80% !important;
+    }
+
 </style>
 
 <!--Modal: modalYoutube-->
@@ -1564,17 +1632,37 @@ $(this).remove();
                 <div class="mt-3">
                  <div class="md-form form-lg">
                  <!-- img width="30" height="30" src="{{ request.user.profile.perfil_img.url }}"-->
-                 <form class="coment" method='POST' data-url='/comentar/{{ peliculaa.id }}/' enctype='multipart/form-data'>
+                 <form class="coment" method='POST' data-url='/comentar/{{ peliculaa.id }}/' enctype='multipart/form-data' onsubmit="return validarSend()">
                   {% csrf_token %}
 
-              <input autocomplete="off" type="text" id="inputLGEx" class="form-control form-control-lg" name="content" style="width: 700px; color: #abb7c4;" size="25">
+              <input autocomplete="off" type="text" id="inputLGEx" class="form-control form-control-lg" name="content" style="width: 700px; color: #abb7c4;" size="50">
                   <label for="inputLGEx" style="font-size: 16px; color: silver;">Dejar un comentario</label>
                   <a class="buttoncoment" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"style="color: hsl(0, 0%, 53.3%); font-size: 16px; position: relative; left: 44.5%;">Cerrar</a>
               <button  onclick="send(this)" class="btn btn-primary " type="submit" style="background-color: hsl(206.1, 79.3%, 52.7%); font-size: 16px; position: relative; left: 47%;">Comentar<i class="fa fa-paper-plane-o ml-2"></i></button>
               
               </form>
+              <div id="input_error" style="margin-top: -19px;"></div>
 </div>
-                    
+
+<script type="text/javascript">
+    function validarSend() {
+    var input = document.getElementById("inputLGEx")
+    var input_error = document.getElementById('input_error')
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_error').style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  } else {
+    input.style.border = "1px solid green";
+    document.getElementById('input_error').style.color = "green";
+    input_error.textContent = "Validado con éxito";
+  }
+  }
+</script>
+                
                 </div>
             </div>
             {% endif %}
@@ -1733,12 +1821,14 @@ $(this).remove();
   <a   data-toggle="collapse" data-target="#collapseExample{{i.id}}z" aria-expanded="false
   " aria-controls="collapseExample{{i.id}}z" style="color: grey; font-family: sans-serif; padding-left: 5px; padding-right: 15px; position: relative; top: 10px;">Responder</a>
   <div  class="collapse container" id="collapseExample{{i.id}}z">
-  <form class="respv{{i.id}}" method="post" data-url="/responder/{{i.slug}}/">
+  <form id="anss{{i.id}}" class="respv{{i.id}}" method="post" data-url="/responder/{{i.slug}}/" onsubmit="return validarSend_ans(this)">
   {% csrf_token %}<div class="md-form">
    <img style="border-radius: 50%; width: 50px; height: 50px;" src="{{request.user.profile.perfil_img.url}}">
-    <input autocomplete="off" style="display: inline; width: 40%; position:relative; color: #abb7c4;" placeholder="Añade una respuesta" type="text" length="400" class="form-control" name="respuesta" required><button style="display: inline; background: none; border: none" type="submit"  value="responder" name="" onclick="res(this)" id="v{{i.id}}"><i class="fa fa-send point" style="color: white; cursor: pointer;" ></i></button>
+    <input id="xv{{i.id}}" autocomplete="off" style="display: inline; width: 40%; position:relative; color: #abb7c4;" placeholder="Añade una respuesta" type="text" length="400" class="form-control" name="respuesta" required><button style="display: inline; background: none; border: none" type="submit"  value="responder" name="" onclick="res(this)" id="v{{i.id}}"><i class="fa fa-send point" style="color: white; cursor: pointer;" ></i></button>
 </div>
+<div id="input_errorv{{i.id}}" style="margin-top: -19px;"></div>
   </form>
+  
 </div>
  </div>
 <div id="j{{i.id}}">
@@ -1874,6 +1964,7 @@ $(this).remove();
 <i class="fa fa-close"  aria-hidden="true"></i>
 </a>
                  </form>
+                 <div id="input_error_update_ans{{cm.id}}" style="margin-top: 0px;"></div>
 </div>
                     
                 </div>
@@ -1909,7 +2000,7 @@ $(this).remove();
                  <div class="md-form form-lg">
                   <form method="post" class="updatecp{{ i.slug }}" data-url="/{{ i.slug }}/edit/">
                    {% csrf_token %}
-                 <textarea id="textop{{i.slug}}" onkeypress="return limita(400);" style=" height: 6em;
+                 <textarea id="textop{{i.slug}}" onkeypress="return limita(1500);" style=" height: 6em;
    width: 400px;" name="content">{{i.content}}</textarea> 
    <br>
    <input  onclick="update(this)" id="p{{ i.slug }}" style="border: none; cursor: pointer" type="submit" title="Editar" name="" class="redbtn" style="padding: 7px;" value="Editar">
@@ -1917,6 +2008,7 @@ $(this).remove();
 <i class="fa fa-close"  aria-hidden="true"></i>
 </a>
                  </form>
+                 <div id="input_error_update{{ i.slug }}" style="margin-top: 0px;"></div>
 </div>
                     
                 </div>
@@ -1938,7 +2030,26 @@ $(this).remove();
 
 
 </div> 
-
+<script type="text/javascript">
+    function validarSend_ans(b) {
+       var str = b.id
+       var strr = str.substr(4)
+    var input = document.getElementById("xv" + strr)
+    var input_error = document.getElementById('input_errorv' + strr)
+  // validate input
+  if (input.value.length > 1500) {
+    input.style.border = "1px solid red";
+    document.getElementById('input_errorv' + strr).style.color = "red";
+    input_error.textContent = "No puede contener más de 1500 caracteres";
+    input.focus();
+    return false;
+  } else {
+    input.style.border = "1px solid green";
+    document.getElementById('input_errorv' + strr).style.color = "green";
+    input_error.textContent = "Validado con éxito";
+  }
+  }
+</script>
 <style type="text/css">
 
 /* Customize the label (the container) */
