--- a/templates/ajaxserie.html
+++ b/templates/ajaxserie.html
@@ -1,14 +1,14 @@
-    			<div class="hvr-inner" id="putos{{ o.id }}" style="height: 190px;">
+    			<div class="hvr-inner" id="putos{{ o.id }}">
 					            				
-					            				<a href="{% url 'series_detail' slug=o.slug %}" style="color: white; width: 100%; top: 28.9% ; position: relative; background-color: transparent;" class="btn redbtn"><i style="font-size: 50px; text-align: center; font-weight: bold;" class="fa fa-play point" aria-hidden="true"></i> </a>
+					            				<a href="{% url 'series_detail' slug=o.slug %}" style="color: white; width: 100%; top: 37% ; position: relative; background-color: transparent;" class="btn redbtn"><i style="font-size: 50px; text-align: center; font-weight: bold;" class="fa fa-play point" aria-hidden="true"></i> </a>
 
 {% if request.user.is_authenticated %}
 {% if not o in request.user.favoritos_series.all %}					            				<!-- añadir a favoritos -->
 
-<form style="display: inline;position: relative; top: -39.4%; left: 56%; padding: 0px;" class="my-ajax-formfab{{o.id}}" method='POST'data-url="/añadirfavorito_series/{{o.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 58%; padding: 0px;" class="my-ajax-formfab{{o.id}}" method='POST'data-url="/añadirfavorito_series/{{o.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfav(this)" id="fab{{o.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer;" type="submit"><i class="fa fa-heart-o" aria-hidden="true" style="color: rgba(199, 0, 57, 0.8); font-size: 17px;"></i></button>
 					            				</form>
-					            				<form style="display: inline;position: relative; top: -39.4%; left: 56%; padding: 0px;" class="my-ajax-formafab{{o.id}}" method='POST'data-url="/eliminar_añadirfavorito_series/{{o.id}}/">{% csrf_token %}
+					            				<form style="display: inline;position: relative; top: -30%; left: 58%; padding: 0px;" class="my-ajax-formafab{{o.id}}" method='POST'data-url="/eliminar_añadirfavorito_series/{{o.id}}/">{% csrf_token %}
 					            				<button  onclick="myFunctionfa2(this)" id="afab{{o.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer; display: none;" type="submit"><i class="fa fa-heart" aria-hidden="true" style="color: rgba(199, 0, 57, 0.8); font-size: 17px;"></i></button>
 					            				</form>
 					            				<script>
@@ -90,10 +90,10 @@
 
 
 
-<form style="display: inline;position: relative; top: -39.4%; left: 56%; padding: 0px;" class="my-ajax-formsfab{{o.id}}" method='POST'data-url="/eliminar_añadirfavorito_series/{{o.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 58%; padding: 0px;" class="my-ajax-formsfab{{o.id}}" method='POST'data-url="/eliminar_añadirfavorito_series/{{o.id}}/">{% csrf_token %}
 					            				<button  onclick="myfunctionfavss(this)" id="sfab{{o.id}}"title="Favoritos" class="" style="background: none; border: none; cursor: pointer; " type="submit"><i class="fa fa-heart" aria-hidden="true" style="color: rgba(199, 0, 57, 0.8); font-size: 17px;"></i></button>
 					            				</form>
-<form style="display: inline;position: relative; top: -39.4%; left: 56%; padding: 0px;" class="my-ajax-formfab{{o.id}}" method='POST'data-url="/añadirfavorito_series/{{o.id}}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 58%; padding: 0px;" class="my-ajax-formfab{{o.id}}" method='POST'data-url="/añadirfavorito_series/{{o.id}}/">{% csrf_token %}
 					            				<button  onclick="myfunctionfavass2(this)" id="fab{{o.id}}"title="Favoritos" class="" style="display: none; background: none; border: none; cursor: pointer;" type="submit"><i class="fa fa-heart-o" aria-hidden="true" style="color: rgba(199, 0, 57, 0.8); font-size: 17px;"></i></button>
 					            				</form>
 					            				<script>
@@ -195,11 +195,11 @@
 
 {% if not o in peliculase_serie %}	
 					            				<!-- ver más tarde -->
-<form style="display: inline;position: relative; top: -39.4%; left: 50%; padding: 0px;" class="my-ajax-formn{{o.id}}" method='POST'data-url="/vermastarde_series/{{ o.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 52%; padding: 0px;" class="my-ajax-formn{{o.id}}" method='POST'data-url="/vermastarde_series/{{ o.id }}/">{% csrf_token %}
 					            				<button onclick="myfunctiona(this)" id="n{{o.id}}"  title="Ver más tarde" class="" style="background: none; border: none; cursor: pointer; " type="submit" style=""><i   style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-eye-slash" aria-hidden="true"></i></button>
 					            				
 					            				</form>
-<form style="display: inline;position: relative; top: -39.4%; left: 50%; padding: 0px;" class="my-ajax-formñ{{ o.id }}" method='POST'data-url="/eliminar_vermastarde_series/{{ o.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 52%; padding: 0px;" class="my-ajax-formñ{{ o.id }}" method='POST'data-url="/eliminar_vermastarde_series/{{ o.id }}/">{% csrf_token %}
 					            				<button name="eye" style="background: none; border: none; cursor: pointer; display: none;"id="ñ{{ o.id }}"onclick="myfunctiona2(this)" title="Ver más tarde" class="example" type="submit"><i  style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-eye" aria-hidden="true"></i></button>
 					            			</form>
 					            				<!-- termina ver más tarde -->
@@ -293,11 +293,11 @@
 {% else %}
 
 		<!-- ver más tarde -->
-<form style="display: inline;position: relative; top: -39.4%; left: 50%; padding: 0px;" class="my-ajax-formñ{{o.id}}" method='POST'data-url="/eliminar_vermastarde_series/{{ o.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 52%; padding: 0px;" class="my-ajax-formñ{{o.id}}" method='POST'data-url="/eliminar_vermastarde_series/{{ o.id }}/">{% csrf_token %}
 					            				<button onclick="myfunctiona2(this)" id="ñ{{ o.id }}"  title="Ver más tarde" class="" style="background: none; border: none; cursor: pointer; " type="submit" style=""><i   style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-eye" aria-hidden="true"></i></button>
 					            				
 					            				</form>
-<form style="display: inline;position: relative; top: -39.4%; left: 50%; padding: 0px;" class="my-ajax-formn{{ o.id }}" method='POST'data-url="/vermastarde_series/{{ o.id }}/">{% csrf_token %}
+<form style="display: inline;position: relative; top: -30%; left: 52%; padding: 0px;" class="my-ajax-formn{{ o.id }}" method='POST'data-url="/vermastarde_series/{{ o.id }}/">{% csrf_token %}
 					            				<button name="eye" style="background: none; border: none; cursor: pointer; display: none;"id="n{{ o.id }}"onclick="myfunctiona(this)" title="Ver más tarde" class="example" type="submit"><i  style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-eye-slash" aria-hidden="true"></i></button>
 					            			</form>
 					            				<!-- termina ver más tarde -->
@@ -379,11 +379,11 @@
 
 {% endif %}
 <a title="Ver más" class="" type="
-					            				submit" style="position: relative; top: -39.4%; left: 48%;"><i  id="done" style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-plus" aria-hidden="true"></i></a>
+					            				submit" style="position: relative; top: -30%; left: 50%;"><i  id="done" style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-plus" aria-hidden="true"></i></a>
 
 					            				{% else %}
 					            				<a title="Ver más" class="" type="
-					            				submit" style="position: relative; top: -39.4%; left: 86%;"><i  id="done" style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-plus" aria-hidden="true"></i></a>
+					            				submit" style="position: relative; top: -30%; left: 86%;"><i  id="done" style="color: rgba(255, 255, 255, 0.7); font-size: 17px;" class="fa fa-plus" aria-hidden="true"></i></a>
 {%endif%}													
 
 
