--- a/templates/index.html
+++ b/templates/index.html
@@ -706,8 +706,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 			       	 	</div-->
 				    </div>
 				</div>
-
-				{% if onseries %}
+{% if request.user.is_authenticated and request.user.is_admin %}
 				<div class="title-hd">
 					<h2>Series</h2>
 					<a href="/series_list/orden_de_subida/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
@@ -733,7 +732,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 
 				            			<div class="movie-item-style-2 movie-item-style-1" style="padding-bottom: 0px; margin-bottom: 0px;">
 					            			<div class="mv-img">
-					            				<img style=" height: 190px;" src="{{ o.serie_cover.url }}" alt="" width="170" height="250">
+					            				<img  src="{{ o.serie_cover.url }}" alt="" >
 					            			</div> 
 					            				{% include 'ajaxserie.html' %}
 					            			<div class="title-in">
