--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1811,11 +1811,11 @@ $(this).remove();
 {% endif %}
 {% if not request.user in i.unvote.all %}
 <form style="display: inline;" method="post" class="unlike{{i.id}}" data-url="/dislike/{{i.id}}/">{% csrf_token %}
- <button class="buttonn" onclick="unlike(this)" id="bul{{i.id}}" style="border: none; background: none;">  <a style="color: grey; padding-left: 5px; padding-right: 5px; position: relative; top: 10px;" ><i class="fa fa-thumbs-down" aria-hidden="true" id="unlike{{i.id}}" > <span id="count">{{i.unvote.all|length}}</span> </i></a></button>
+ <button class="buttonn" onclick="unlike(this)" id="bul{{i.id}}" style="border: none; background: none;">  <a style="color: grey; padding-left: 5px; padding-right: 5px; position: relative; top: 10px;" ><i class="fa fa-thumbs-down" aria-hidden="true" id="unlike{{i.id}}" > </i><span id="count">{{i.unvote.all|length}}</span> </a></button>
 </form>
 {% else %}
 <form style="display: inline;" method="post" class="unlike{{i.id}}" data-url="/outdislike/{{i.id}}/">
- <button class="buttonn" onclick="unlike(this)" id="bul{{i.id}}" style="border: none; background: none;">  <a style="color: #e2e2e2; padding-left: 5px; padding-right: 5px; position: relative; top: 10px;" ><i class="fa fa-thumbs-down" aria-hidden="true"  id="unlike{{i.id}}"> <span id="count">{{i.unvote.all|length}}</span> </i></a></button>
+ <button class="buttonn" onclick="unlike(this)" id="bul{{i.id}}" style="border: none; background: none;">  <a style="color: #e2e2e2; padding-left: 5px; padding-right: 5px; position: relative; top: 10px;" ><i class="fa fa-thumbs-down" aria-hidden="true"  id="unlike{{i.id}}"></i> <span id="count">{{i.unvote.all|length}}</span> </a></button>
 </form>
 {% endif %}
   <a   data-toggle="collapse" data-target="#collapseExample{{i.id}}z" aria-expanded="false
@@ -2008,7 +2008,7 @@ $(this).remove();
 <i class="fa fa-close"  aria-hidden="true"></i>
 </a>
                  </form>
-                 <div id="input_error_update{{ i.slug }}" style="margin-top: 0px;"></div>
+                 <div id="input_error_updatep{{ i.slug }}" style="margin-top: 0px;"></div>
 </div>
                     
                 </div>
