--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@ background: linear-gradient(to left, #0b8793, #360033); /* W3C, IE 10+/ Edge, Fi
 					<a href="/ver%todo/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
 				</div>
 				<div class="tabs">
-					<ul class="tab-links">
+					<ul class="tab-links" style="text-transform: uppercase;">
 						<li class="active"><a href="#tab1">#Recientes</a></li>
 						{% if request.user.favoritos %}
 						<li><a href="#tab2" id="tabparati"> #Para ti</a></li>
@@ -712,7 +712,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 					<a href="/series_list/orden_de_subida/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
 				</div>
 				<div class="tabs">
-					<ul class="tab-links-2">
+					<ul class="tab-links-2" style="text-transform: uppercase;">
 						<li class="active"><a href="#tab21">#Series</a></li>
 						<li class=""><a href="#tab22">#últimos</a></li>
 						<li><a href="#tab23"> #Top semanal  </a></li>
