--- a/templates/comingsoon.html
+++ b/templates/comingsoon.html
@@ -5,7 +5,7 @@
 <html lang="es" class="no-js">
 <head>
 	<!-- Basic need -->
-	<title>Open Pediatrics</title>
+	<title>Coming Soon</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
