--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -41,6 +41,7 @@
 		</div>
 	</div>
 </div>
+
 <div class="page-single">
 	<div class="container">
 		<div class="row ipad-width">
@@ -64,7 +65,19 @@
 							<li class="{% if not user_details and not user_favoritos and not series_fav and vermas%}active{% endif %}"><a href="/ver_más_tarde/{{request.user.username}}/">Ver más tarde</a></li>
 						</ul>
 					</div>
-
+<script type="text/javascript">
+	var upload = document.getElementById("imgInp");
+upload.addEventListener("change", function(e) {
+    var size = upload.files[0].size;
+    if(size < 1048576 * 2) { //1MB         
+      console.log('Permitido'); //Abajo del limite
+    } else {           
+      alert('No permitido, debe pesar menos de 2mb'); //Limite
+      upload.value = ""; //Limpiar campo          
+    }
+    e.preventDefault();
+});
+</script>
 <div class="user-fav">
 						<p>Social</p>
 						<ul>
@@ -130,33 +143,7 @@
 						<!-- Trigger/Open The Modal -->
 
 
-			<script type="text/javascript">
-			// Get the modal
-			var modal = document.getElementById('myModal');
-
-			// Get the button that opens the modal
-			var btn = document.getElementById("myBtn");
-
-			// Get the <span> element that closes the modal
-			var span = document.getElementsByClassName("close")[0];
-
-			// When the user clicks on the button, open the modal 
-			btn.onclick = function() {
-			    modal.style.display = "block";
-			}
-
-			// When the user clicks on <span> (x), close the modal
-			span.onclick = function() {
-			    modal.style.display = "none";
-			}
-
-			// When the user clicks anywhere outside of the modal, close it
-			window.onclick = function(event) {
-			    if (event.target == modal) {
-			        modal.style.display = "none";
-			    }
-			}
-		</script>			</div>
+					</div>
 				</div>
 			</div>
 {% if not series_fav %}
@@ -260,11 +247,7 @@
 								}
 							}
 						</style>
-					<script type="text/javascript">
-						function functionas(b)
-
-						b.value = ""
-					</script>
+					
 						<div class="row">
 							<div class="col-md-2">
 								<input style="cursor: pointer;" class="submit" type="submit" value="Cambiar">
