--- a/templates/base.html
+++ b/templates/base.html
@@ -2442,6 +2442,7 @@ function passwordVerify() {
         <h4>Cuenta</h4>
         <ul>
           <li><a href="#">Guía de usuario</a></li>
+          
         </ul>
       </div>
       <!--div class="flex-child-ft item5">
@@ -2456,7 +2457,7 @@ function passwordVerify() {
   </div>
   <div class="ft-copyright">
     <div class="ft-left">
-      <p>© 2019 WaoMovies. Todos los derechos reselvados</p>
+      <p>© 2019 WaoMovies. Todos los derechos reservados.</p>
     </div>
     <div class="backtotop">
       <p><a href="#" id="back-to-top">Regresar arriba  <i class="fa fa-arrow-up" aria-hidden="true"></i></a></p>
