--- a/templates/sobre/index.html
+++ b/templates/sobre/index.html
@@ -712,7 +712,7 @@
   </div>
   <div class="ft-copyright">
     <div class="ft-left">
-      <p>© 2019 WaoMovies. Todos los derechos reselvados</p>
+      <p>© 2019 WaoMovies. Todos los derechos reservados.</p>
     </div>
     <div class="backtotop">
       <p><a href="#" id="back-to-top">Regresar arriba  <i class="fa fa-arrow-up" aria-hidden="true"></i></a></p>
